Añadida gestion Dtos de los modelos, refactorizado controllers con el uso de estos.

--- a/backend/TaskBoard.api/TaskBoard.api/appsettings.json
+++ b/backend/TaskBoard.api/TaskBoard.api/appsettings.json
@@ -12,6 +12,6 @@
     "Audience": "taskboard-users"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=TaskBoard.db"
+    "DefaultConnection": "Data Source=bin/Debug/net8.0/TaskBoard.db"
   }
 }
