endpoints compeltamente funcionales de registro y login, revisado y mejorado la validacion de entrada y control de excepciones.

--- a/backend/TaskBoard.api/TaskBoard.api/appsettings.json
+++ b/backend/TaskBoard.api/TaskBoard.api/appsettings.json
@@ -7,11 +7,11 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "YourSuperSecretKeyHere_32CharsMin",
+    "Key": "1238746129837461298347652198357982314765",
     "Issuer": "https://taskboard.com",
     "Audience": "taskboard-users"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=bin/Debug/net8.0/TaskBoard.db"
+    "DefaultConnection": "Data Source=TaskBoard.db"
   }
 }
