--- a/backend/TaskBoard.api/TaskBoard.api/appsettings.json
+++ b/backend/TaskBoard.api/TaskBoard.api/appsettings.json
@@ -10,7 +10,8 @@
   "Jwt": {
     "Key": "1238746129837461298347652198357982314765",
     "Issuer": "https://taskboard.com",
-    "Audience": "taskboard-users"
+    "Audience": "taskboard-users",
+    "ExpiresInHours": 2
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=TaskBoard.db"
