--- a/backend/Simpled/Simpled/Simpled.csproj
+++ b/backend/Simpled/Simpled/Simpled.csproj
@@ -6,6 +6,17 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 
+	<PropertyGroup>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
+	</PropertyGroup>
+
+
+
+
+
+
+
 	<ItemGroup>
 		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
