--- a/backend/Simpled/Simpled/Simpled.csproj
+++ b/backend/Simpled/Simpled/Simpled.csproj
@@ -27,6 +27,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include="Resources\" />
 		<Folder Include="wwwroot\" />
 		<Folder Include="wwwroot\" />
 	</ItemGroup>
