--- a/backend/Simpled/Simpled/Simpled.csproj
+++ b/backend/Simpled/Simpled/Simpled.csproj
@@ -11,6 +11,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Remove="wwwroot\images\default\avatar-default.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
@@ -28,7 +32,10 @@
 
 	<ItemGroup>
 		<Folder Include="Resources\" />
-		<Folder Include="wwwroot\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="wwwroot\images\default\avatar-default.jpg" />
 	</ItemGroup>
 
 </Project>
