--- a/frontend/simpled/package.json
+++ b/frontend/simpled/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-avatar": "^1.1.9",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-select": "^2.1.6",
@@ -32,6 +33,7 @@
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4"
   },
