--- a/frontend/simpled/package.json
+++ b/frontend/simpled/package.json
@@ -29,8 +29,8 @@
     "framer-motion": "^12.9.7",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "pikaday": "^1.8.2",
     "react": "^19.0.0",
-    "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pikaday": "^1.7.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint-config-prettier": "^10.1.2",
