--- a/frontend/simpled/package.json
+++ b/frontend/simpled/package.json
@@ -28,6 +28,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.9.7",
     "lucide-react": "^0.483.0",
+    "motion": "^12.10.4",
     "next": "15.2.3",
     "pikaday": "^1.8.2",
     "react": "^19.0.0",
