--- a/frontend/simpled/package.json
+++ b/frontend/simpled/package.json
@@ -32,7 +32,9 @@
     "next": "15.2.3",
     "pikaday": "^1.8.2",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.16.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.0.2",
