--- a/backend/Simpled/Simpled/appsettings.json
+++ b/backend/Simpled/Simpled/appsettings.json
@@ -1,29 +1,36 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SimpledDb.sqlite"
-  },
-  "JwtSettings": {
-    "Key": "234980567234908562340985690438256",
-    "Issuer": "Simpled",
-    "Audience": "SimpledUsers"
-  },
-  "Authentication": {
-    "Google": {
-      "ClientId": "234342175737-c4qr5thap0ub5pmprouikobsk4k8uml7.apps.googleusercontent.com",
-      "ClientSecret": "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",
-      "CallbackPath": "/signin-google"
+    "ConnectionStrings": {
+        "DefaultConnection": "Data Source=SimpledDb.sqlite"
     },
-    "GitHub": {
-      "ClientId": "Ov23liPS0zrjasqSzPQH",
-      "ClientSecret": "68c127c151f267808dc8b7892945abfde6cb0f59",
-      "CallbackPath": "/signin-github"
-    }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "JwtSettings": {
+        "Key": "234980567234908562340985690438256",
+        "Issuer": "Simpled",
+        "Audience": "SimpledUsers"
+    },
+    "Authentication": {
+        "Google": {
+            "ClientId": "234342175737-c4qr5thap0ub5pmprouikobsk4k8uml7.apps.googleusercontent.com",
+            "ClientSecret": "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",
+            "CallbackPath": "/signin-google"
+        },
+        "GitHub": {
+            "ClientId": "Ov23liPS0zrjasqSzPQH",
+            "ClientSecret": "68c127c151f267808dc8b7892945abfde6cb0f59",
+            "CallbackPath": "/signin-github"
+        }
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "Kestrel": {
+        "Endpoints": {
+            "Http": {
+                "Url": "http://0.0.0.0:5193"
+            }
+        }
+    },
+    "AllowedHosts": "*"
 }
