--- a/backend/Simpled/Simpled/appsettings.json
+++ b/backend/Simpled/Simpled/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data Source=SimpledDb.sqlite"
+        "DefaultConnection": "Server=localhost;Database=simpled;User Id=simpled_user;Password=12345;"
     },
     "JwtSettings": {
         "Key": "234980567234908562340985690438256",
